# CICE

./: CMakeLists.txt  ChangeLog
bundle/: .gitignore  CMakeLists.txt
cicecore/: CMakeLists.txt
cicecore/cicedynB/analysis/: ice_diagnostics.F90
cicecore/cicedynB/dynamics/: ice_transport_driver.F90
cicecore/cicedynB/general/: ice_forcing.F90  ice_forcing_bgc.F90  ice_step_mod.F90
cicecore/cicedynB/infrastructure/: ice_blocks.F90  ice_grid.F90  ice_restart_driver.F90  ice_restoring.F90  ice_shr_reprosum86.c
cicecore/cicedynB/infrastructure/comm/mpi/: ice_boundary.F90  ice_reprosum.F90
cicecore/cicedynB/infrastructure/comm/serial/: ice_reprosum.F90
cicecore/cicedynB/infrastructure/io/io_netcdf/: ice_restart.F90
cicecore/drivers/cice/: CICE_InitMod.F90  CICE_RunMod.F90
cicecore/drivers/standalone/cice/: CICE_InitMod.F90
cicecore/shared/: ice_distribution.F90  ice_fileunits.F90
cmake/: cice6_compiler_flags.cmake
test/: CMakeLists.txt  ice_in
test/forcing/gx3/: gx3_forcing_fields.nc
test/grid/gx3/: global_gx3.bathy.nc
